--- a/wp-content/themes/skalTheme/assets/css/tailwind.css
+++ b/wp-content/themes/skalTheme/assets/css/tailwind.css
@@ -94,7 +94,7 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --font-roboto: 'Roboto', sans-serif;
+    --font-roboto: "Roboto", sans-serif;
   }
 }
 @layer base {
@@ -252,6 +252,9 @@
   }
   .pointer-events-none {
     pointer-events: none;
+  }
+  .visible {
+    visibility: visible;
   }
   .absolute {
     position: absolute;
@@ -691,9 +694,6 @@
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
-  }
   .space-y-2 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -1121,6 +1121,9 @@
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-3 {
+    padding-bottom: calc(var(--spacing) * 3);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
@@ -2077,6 +2080,9 @@ input[type="number"] {
 }
 .prose a:hover {
   color: #c2410c;
+}
+.specialPrice del, .specialPrice del .woocommerce-Price-amount, .specialPrice del .woocommerce-Price-amount bdi, .specialPrice del .amount {
+  font-size: 15px !important;
 }
 @property --tw-translate-x {
   syntax: "*";
